[package]
name = "pine-doc"
version = "0.1.0"
authors = ["liuxiong <liuxiong332@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pine = { path = "../pine"}
comrak = "0.7"
lazy_static = "1.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
